Add missing prototypes for arc4random_buf and arc4random_uniform

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=34511